who page added and some cute icons

--- a/who.html
+++ b/who.html
@@ -33,48 +33,21 @@
   </nav>
 
   <div class="container">
-    <div class="about-me">
-      <img src="assets/profilepic.jpg" class="profile-pic" alt="">
-      <div class="about-description">
-        <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce dignissim lorem velit. Vestibulum
-          bibendum molestie mi in tincidunt. Integer bibendum eros a diam semper auctor.</figcaption>
-        <div class="right-btn"><a href="who.html"><button type="button" class="btn btn-light">More..</button></a></div>
-      </div>
-    </div>
-
-    <h1 class="main-title blog">Blog Posts</h1>
-    <div class="content-home">
-      <div class="card">
-        <div class="card text-center">
-          <img src="/assets/constanze.jpg" class="card-img-top">
-          <div class="card-body">
-            <h5 class="card-title ">This is my first post</h5>
-            <p class="card-text ">Yup definitely first</p>
-            <a href="posts/post1.html" class="btn btn-outline-primary">Read now</a>
-          </div>
+    <h1 class="main-title who">Who?</h1>
+    <div class="who-container">
+        <img src="assets/profilepic.jpg" class="who-profile-pic" alt="">
+        <div class="who-description">
+            <h4>Hi there!</h4>   
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque turpis enim, rutrum eget nunc dapibus, fringilla congue turpis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam quis leo justo. Ut tempus ante non rhoncus egestas. Etiam finibus dui id accumsan dictum. Duis egestas cursus felis, sit amet vehicula lorem lobortis sed. Praesent aliquet lectus libero, vitae rhoncus est porttitor id. Aliquam et dignissim eros, ut auctor velit. </p>
+            <div class="who-icons">
+                <img class="svg-icons" src="assets/panda.png" alt=""><span class="txt-who-icon">I definitely sleep a lot.</span>
+                <br>
+                <img class="svg-icons" src="assets/sloth.png" alt=""><span class="txt-who-icon">I enjoy anime and nerdy stuff ^_^</span>
+                <br>
+                <img class="svg-icons" src="assets/monkey.png" alt=""><span class="txt-who-icon">Food? Food!</span>
+            </div>
         </div>
       </div>
-      <div class="card-container card">
-        <div class="card text-center">
-          <img src="/assets/constanze2.jpg" class="card-img-top">
-          <div class="card-body">
-            <h5 class="card-title">I thought first was enough..</h5>
-            <p class="card-text">Lets keep blogging!</p>
-            <a href="posts/post2.html" class="btn btn-outline-primary">Read now</a>
-          </div>
-        </div>
-      </div>
-      <div class="card-container card">
-        <div class="card text-center">
-          <img src="/assets/constanze3.jpg" class="card-img-top">
-          <div class="card-body">
-            <h5 class="card-title">Third one.</h5>
-            <p class="card-text">Can't believe I did the 3rd.</p>
-            <a href="posts/post3.html" class="btn btn-outline-primary">Read now</a>
-          </div>
-        </div>
-      </div>
-    </div>
   </div>
 
   <footer>
