--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/media.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <title>Mimmy's Personal Website</title>
 </head>
 
@@ -48,7 +48,7 @@
         <div class="card text-center">
           <img src="/assets/constanze.jpg" class="card-img-top">
           <div class="card-body">
-            <h5 class="card-title ">This is my first post</h5>
+            <h5 class="card-title ">Hiya hoomaan! This is my first post</h5>
             <p class="card-text ">Yup definitely first</p>
             <a href="posts/post1.html" class="btn btn-outline-primary">Read now</a>
           </div>
@@ -82,11 +82,55 @@
     <h6>Contents</h6>
     <a href="https://github.com/norainiibrahim98" target="_blank" rel="noopener noreferrer"><img class="svg-icons" src="assets/github-brands.svg" alt=""></a>
     <a href="https://www.linkedin.com/in/norainiibrahim/" target="_blank" rel="noopener noreferrer"><img class="svg-icons" src="assets/linkedin-brands.svg" alt=""></a>
+    <form class="form" action="#">
+      <div class="input-group">
+         <input class="btn btn-sm" name="email" id="email" type="email" placeholder="Subscribe me!" required>
+         <button id="btnSubmit" data-toggle="modal" data-target="#myModal" class="btn btn-info btn-sm" type="submit">Submit</button>
+      </div>
+    </form>
+    <!-- Modal -->
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Thank you bud!</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            Thank you for subscribing, expect to hear me sooonnn! Like, ocassionally.
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-sm" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
   </footer>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+  <script>
+    $(document).ready(function() {
+      $('.input-group button').addClass('disabled').attr('disabled', 'disabled');
+      $('.input-group input').keyup(function() {
+        var empty = false;
+        $('.input-group input').each(function() {
+          if ($(this).val().length == 0) {
+          empty = true;              }
+        });
+
+        if (empty) {
+          $('.input-group button').addClass('disabled').attr('disabled', 'disabled');
+        } else {
+          $('.input-group button').removeClass('disabled').attr('disabled', false);
+
+        }
+      });
+    });
+  </script>
 </body>
 
 </html>
