--- a/who.html
+++ b/who.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/media.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <title>Mimmy's Personal Website</title>
@@ -19,10 +20,10 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item active">
+        <li class="nav-item">
           <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item active">
           <a class="nav-link" href="who.html">Who?</a>
         </li>
         <li class="nav-item">
@@ -44,7 +45,7 @@
                 <br>
                 <img class="svg-icons" src="assets/sloth.png" alt=""><span class="txt-who-icon">I enjoy anime and nerdy stuff ^_^</span>
                 <br>
-                <img class="svg-icons" src="assets/monkey.png" alt=""><span class="txt-who-icon">Food? Food!</span>
+                <img class="svg-icons" src="assets/monkey.png" alt=""><span class="txt-who-icon">Food? Food! ( ＾◡＾)っ ♡</span>
             </div>
         </div>
       </div>
@@ -55,11 +56,35 @@
     <h6>Contents</h6>
     <a href="https://github.com/norainiibrahim98" target="_blank" rel="noopener noreferrer"><img class="svg-icons" src="assets/github-brands.svg" alt=""></a>
     <a href="https://www.linkedin.com/in/norainiibrahim/" target="_blank" rel="noopener noreferrer"><img class="svg-icons" src="assets/linkedin-brands.svg" alt=""></a>
+    <form action="#">
+      <div class="input-group">
+         <input class="btn btn-sm" name="email" id="email" type="email" placeholder="Subscribe me!" required>
+         <button class="btn btn-info btn-sm" type="submit">Submit</button>
+      </div>
+     </form>
   </footer>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+  <script>
+    $(document).ready(function() {
+      $('.input-group button').addClass('disabled').attr('disabled', 'disabled');
+      $('.input-group input').keyup(function() {
+        var empty = false;
+        $('.input-group input').each(function() {
+          if ($(this).val().length == 0) {
+          empty = true;              }
+        });
+
+        if (empty) {
+          $('.input-group button').addClass('disabled').attr('disabled', 'disabled');
+        } else {
+          $('.input-group button').removeClass('disabled').attr('disabled', false);
+        }
+      });
+    });
+  </script>
 </body>
 
 </html>
