--- a/who.html
+++ b/who.html
@@ -26,9 +26,6 @@
         <li class="nav-item active">
           <a class="nav-link" href="who.html">Who?</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="content.html">Content Blog</a>
-        </li>
       </ul>
     </div>
   </nav>
@@ -38,7 +35,7 @@
     <div class="who-container">
         <img src="assets/profilepic.jpg" class="who-profile-pic" alt="">
         <div class="who-description">
-            <h4>Hi there!</h4>   
+            <h4 class="main-title blog">Hi there!</h4>   
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque turpis enim, rutrum eget nunc dapibus, fringilla congue turpis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam quis leo justo. Ut tempus ante non rhoncus egestas. Etiam finibus dui id accumsan dictum. Duis egestas cursus felis, sit amet vehicula lorem lobortis sed. Praesent aliquet lectus libero, vitae rhoncus est porttitor id. Aliquam et dignissim eros, ut auctor velit. </p>
             <div class="who-icons">
                 <img class="svg-icons" src="assets/panda.png" alt=""><span class="txt-who-icon">I definitely sleep a lot.</span>
