--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="card-holder">
         <div class="card">
           <div class="card text-center">
-            <img src="/assets/constanze.jpg" class="card-img-top" alt="example picture">
+            <img src="assets/constanze.jpg" class="card-img-top" alt="example picture">
             <div class="card-body">
               <h5 class="card-title ">Hiya hoomaan!</h5>
               <p class="card-text ">Yup definitely first</p>
@@ -54,7 +54,7 @@
       <div class="card-holder">
         <div class="card">
           <div class="card text-center">
-            <img src="/assets/constanze2.jpg" class="card-img-top" alt="example picture">
+            <img src="assets/constanze2.jpg" class="card-img-top" alt="example picture">
             <div class="card-body">
               <h5 class="card-title">Howdy hooman!</h5>
               <p class="card-text">Lets keep blogging!</p>
