--- a/who.html
+++ b/who.html
@@ -44,7 +44,10 @@
             </div>
         </div>
       </div>
-  </div>
+      <div>Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+      <br>
+      <br>
+    </div>
 
   <footer>
     <a href="index.html"><h6>Home</h6></a>
